2008-08-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/builder.py: added missing imports.

2008-08-17  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css,
	jhbuild/buildbot/factory.py,
	jhbuild/buildbot/status/web/__init__.py,
	jhbuild/buildbot/status/web/build.py,
	jhbuild/buildbot/status/web/builder.py,
	jhbuild/buildbot/status/web/logs.py,
	jhbuild/buildbot/status/web/step.py,
	jhbuild/buildbot/status/web/waterfall.py,
	jhbuild/buildbot/steps.py: customized most buildbot pages; include test
	success details in waterfall views.

2008-08-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py: fixed typo in get_content_charset()
	name.

2008-08-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py, modulesets/gnome-2.24.modules: ignore missing
	modules when constructing the GTK+ module list; also removed module
	gtksourceviewmm-1.0 as gtksourceview-1.0 has been removed.
	(closes: #548082)

2008-08-17  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py: keep commit log messages as unicode as
	they can well be non-ascii.

2008-08-16  Björn Lindqvist  <bjourne@gmail.com>

	* modulesets/gnome-external-deps-2.24.modules: dbus depends on
	expat. (closes #547184)

2008-08-17  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css,
	jhbuild/buildbot/status/web/__init__.py,
	jhbuild/buildbot/status/web/changes.py: custom buildbot changes pages,
	linking to GNOME ViewVC.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: mark updates limited to /po/ files as
	unimportant as it is unlikely they would break the build.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* buildbot/public_html/lgo.css: color up buildbot exceptions and
	running step.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py: added support for the
	content-transfer-encoding header as it is used in some emails; also
	fixed discovery of last line in translator messages.
