@@ -1,5 +1,13 @@
 2008-08-17  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/buildbot/status/web/__init__.py: fixed count of successful
+	builds.
+
+	* jhbuild/buildbot/status/web/build.py: removed extra character, mark
+	tag with class.
+
+2008-08-17  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/status/web/builder.py: added missing imports.
 
 2008-08-17  Frederic Peters  <fpeters@0d.be>
